--- a/FrontEnd/exception-website/src/App.css
+++ b/FrontEnd/exception-website/src/App.css
@@ -1,7 +1,7 @@
 
 .progress-bar {
   width: 400px;
-  height: 5px;
+  height: 12px;
   margin: 0 auto;
   background-color: rgb(164, 223, 231);
   margin-bottom: 50px;
@@ -47,6 +47,7 @@
   margin: 0;
   margin-bottom: 1rem;
   font-size: 2rem;
+  font-weight: bolder;
   text-align: center;
 }
 input {
