--- a/FrontEnd/exception-website/src/App.css
+++ b/FrontEnd/exception-website/src/App.css
@@ -61,16 +61,11 @@ input {
   display: flex;
   align-content: space-between;
 }
-button {
-  background-color: #4caf50;
-  border: none;
-  color: white;
-  padding: 0.8rem;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
+
 textarea {
   height: 5rem;
+}
+
+.App{
+  background-color:rgb(243, 241, 241) ;
 }
