--- a/FrontEnd/exception-website/src/Components/player.css
+++ b/FrontEnd/exception-website/src/Components/player.css
@@ -2,13 +2,16 @@
 audio {
     filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
     position: relative;
-    height: 15px;
-    width: 100%
+    height: 30px;
+    width: 170%
 }
 
 audio::-webkit-media-controls-mute-button {
     display: none !important;
 }
+audio::-webkit-media-controls-play-button { 
+    transform: scale(2, 2);
+ }
 
 audio::-webkit-media-controls-volume-slider {
     display: none !important;
